objects/Part__c.object
<CustomObject>
    <description>This custom object is used for TE Parts instead of standard object &quot;Product2&quot;.</description>
    <fields>
        <fullName>ACQUIRED_COMPANY_ID__c</fullName>
        <label>Acquired Company ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACQUIRED_FORMAT_ID__c</fullName>
        <label>Acquired Format ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APL_New_Product_Indicator__c</fullName>
        <description>If market date is not available, meantime original date is recent 8 years. Then we define this part is “new product” for APL. Or if the part NPS category is NPS1 or NPS2, define as new product as well.</description>
        <formula>OR(IF(  ISNULL(Market_Date__c ) ,  IF( DATEVALUE(LEFT(PART_RECORD_ORIGINAL_TS__c,10))&gt;= Date(2008,01,01), True, False) , False), IF(OR(TRIM(NPS_category__c) = &quot;NPS 1&quot;, TRIM(NPS_category__c) = &quot;NPS 2&quot;, TRIM(NPS_category__c) = &quot;NPS 3&quot;), True, False ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If market date is not available, meantime original date is recent 8 years. Then we define this part is “new product” for APL</inlineHelpText>
        <label>APL New Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ampics_PL__c</fullName>
        <label>Ampics PL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>AMP</fullName>
                </value>
                <value>
                    <fullName>INSULTRS</fullName>
                </value>
                <value>
                    <fullName>O/H-DIST</fullName>
                </value>
                <value>
                    <fullName>RAYCHEM</fullName>
                </value>
                <value>
                    <fullName>RAYSULAT</fullName>
                </value>
                <value>
                    <fullName>S/ARSTRS</fullName>
                </value>
                <value>
                    <fullName>UNDRGRND</fullName>
                </value>
                <value>
                    <fullName>UTILUX</fullName>
                </value>
                <value>
                    <fullName>DULMISON</fullName>
                </value>
                <value>
                    <fullName>GURO-RES&amp;ACC</fullName>
                </value>
                <value>
                    <fullName>H/V-CABLACC</fullName>
                </value>
                <value>
                    <fullName>IDENTLBL</fullName>
                </value>
                <value>
                    <fullName>INSTRMTS</fullName>
                </value>
                <value>
                    <fullName>OHNETWRK</fullName>
                </value>
                <value>
                    <fullName>URDCONECTR</fullName>
                </value>
                <value>
                    <fullName>DULIN</fullName>
                </value>
                <value>
                    <fullName>ADC-KRONE</fullName>
                </value>
                <value>
                    <fullName>TAPPAT</fullName>
                </value>
                <value>
                    <fullName>HELICAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Aquisition_Part_Number__c</fullName>
        <description>This field will store, Part number from the aquired company. This field will be updated by Cast Iron.</description>
        <label>Aquisition Part Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avg_Cost__c</fullName>
        <label>Average Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Avg_Margin__c</fullName>
        <label>Average Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BASE_UM_CDE__c</fullName>
        <label>Base UM Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC1_DESC__c</fullName>
        <inlineHelpText>CBC1 description (not the code) such as Aero Defense, Automotive, CIS</inlineHelpText>
        <label>CBC Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC3_Description__c</fullName>
        <formula>Product_Hierarchy__r.CBC3_Description__c</formula>
        <label>CBC3 Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC_1_Description__c</fullName>
        <formula>Product_Hierarchy__r.CBC1_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC 1 Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBC_3_Code__c</fullName>
        <formula>Product_Hierarchy__r.CBC3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC 3 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPR_TS__c</fullName>
        <label>CPR Timestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSD_GPL_Family__c</fullName>
        <formula>Product_Hierarchy__r.CSD_GPL_Family__c</formula>
        <label>CSD GPL Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_DRAWING_NBR__c</fullName>
        <label>Customer Drawing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_DRAWING_REVISION_CDE__c</fullName>
        <label>Customer Drawing Revision Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Set_75__c</fullName>
        <label>Cost Set 75</label>
        <precision>13</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Curr_CS_75__c</fullName>
        <label>Curr CS 75</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DD1_Competency_Code__c</fullName>
        <label>DD1 Competency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD2_Competency_Code__c</fullName>
        <label>DD2 Competency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DD3_Competency_Code__c</fullName>
        <label>DD3 Competency Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DGI__c</fullName>
        <description>DGI information is filled via the part integration</description>
        <label>DGI Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defend</fullName>
                </value>
                <value>
                    <fullName>Grow</fullName>
                </value>
                <value>
                    <fullName>Invest</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Other Elctrcl/Elctrnc Comp</fullName>
                </value>
                <value>
                    <fullName>Pre-Assemble Devices</fullName>
                </value>
                <value>
                    <fullName>Single PC Terms &amp; Cont</fullName>
                </value>
                <value>
                    <fullName>Terms &amp; Cont on Reels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DISCONTINUANCE_STATUS_CDE__c</fullName>
        <label>Discontinuance Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_TS__c</fullName>
        <label>DML_TS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DML_USER_ID__c</fullName>
        <label>DML_USER_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DND_Product_Family__c</fullName>
        <description>DND Product Family field from Product Hierarchy</description>
        <formula>Product_Hierarchy__r.DND_Product_Family__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DND Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRAWING_NBR__c</fullName>
        <label>Drawing Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRAWING_REVISION_LETTER_CDE__c</fullName>
        <label>Drawing Revision Letter Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Activation__c</fullName>
        <description>This is the date when the Part got &quot;Active&quot;</description>
        <label>Date of Activation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalId>true</externalId>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawing_Number__c</fullName>
        <label>Drawing Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawing_Revision_Number__c</fullName>
        <label>Drawing Revision Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ELV_ROHS_COMPLIANCE_CDE__c</fullName>
        <inlineHelpText>Identifies what the RoHS Compliance level is by code. RoHS is the environmental standards qualifications for EMEA/Asia.</inlineHelpText>
        <label>RoHS Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ENGINEERING_STATUS_CDE__c</fullName>
        <label>Engineering Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENGR_CONTROLLING_ORG_CDE__c</fullName>
        <label>Engineer Controlling Org Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPUP_CDE__c</fullName>
        <label>EPUP Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_ELV__c</fullName>
        <label>EU_ELV</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EU_RoHS__c</fullName>
        <label>EU_RoHS</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GPL_DESC__c</fullName>
        <inlineHelpText>Global Product Line Short Name</inlineHelpText>
        <label>GPL Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL_Description__c</fullName>
        <formula>IF(NOT(ISBLANK(Product_Hierarchy__c)), Product_Hierarchy__r.GPL_Description__c, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPL Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GPL old</label>
        <referenceTo>Product_Hierarchy__c</referenceTo>
        <relationshipLabel>Parts (GPL)</relationshipLabel>
        <relationshipName>Parts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GPL_txt__c</fullName>
        <inlineHelpText>Global Product Line Code</inlineHelpText>
        <label>GPL Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Code__c</fullName>
        <label>Industry Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Part_Created_for_NDR__c</fullName>
        <label>Is Part Created for NDR?</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_CPC_TRANSACTION_ID__c</fullName>
        <label>Last CPC Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEADFREE_PROCESS_CAPABLE_CDE__c</fullName>
        <label>Leadfree Process Capable Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Time_Days__c</fullName>
        <label>Lead Time Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Part_Number__c</fullName>
        <description>This field will store, Local Part number. This field will be updated by Cast Iron.</description>
        <label>Local Part Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MARKETING_BRAND_ID__c</fullName>
        <label>Marketing Brand ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MATERIAL_TYPE_CDE__c</fullName>
        <label>Material Type Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Date__c</fullName>
        <label>Market Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Material_Type_Desc__c</fullName>
        <description>Material Type Description</description>
        <label>Material Type Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min_Order_Qty__c</fullName>
        <label>Min Order Qty</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDR_Eligible_Part_OLD__c</fullName>
        <description>This field indicates if the Part is Eligible for NDR. The data comes from Corporate_Part_Attributes table in TED for Attribute Id 132</description>
        <inlineHelpText>This field indicates if the Part is Eligible for NDR</inlineHelpText>
        <label>NDR Eligible Part_OLD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                    <default>true</default>
                    <label>NO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NDR_Eligible_Part__c</fullName>
        <description>This field indicates if the Part is Eligible for NDR. The data comes from Corporate_Part_Attributes table in TED for Attribute Id 132</description>
        <inlineHelpText>A - TENGO Elite
B - TENGO Protect</inlineHelpText>
        <label>NDR Eligible Part</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEW_PRODUCT_IND__c</fullName>
        <inlineHelpText>NPI-Indicates if this is a new TE part</inlineHelpText>
        <label>New Product Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEW_PRODUCT_REASON_CDE__c</fullName>
        <label>New Product Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_category__c</fullName>
        <description>calculates the NPS category based  on market date of the PN  and todays date</description>
        <formula>IF (Market_Date__c  &gt;= (TODAY() - 365),&apos;NPS 1&apos;,
IF (Market_Date__c  &gt;= (TODAY() - 730),&apos;NPS 2&apos;,
IF (Market_Date__c  &gt;= (TODAY() - 1095),&apos;NPS 3&apos;,
IF (Market_Date__c  &gt;= (TODAY() - 1825),&apos;NPS 5&apos;,
&apos;&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PART_KEY_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique Identifier for parts.</inlineHelpText>
        <label>Part Key ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PART_RECORD_ORIGINAL_TS__c</fullName>
        <label>Part Record Original Timestamp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PART_RVS_LETTER_CDE__c</fullName>
        <label>Part RVS Letter Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLM_ID__c</fullName>
        <description>this is a field for testing purposes.
Related to R 1460</description>
        <label>PLM ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_CDE__c</fullName>
        <label>Product Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROD_NAME__c</fullName>
        <label>Product Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROMOTE_IND__c</fullName>
        <label>Pomote Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PURCHASING_COMMODITY_CDE__c</fullName>
        <label>Purchasing Commodity Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Lower_Name__c</fullName>
        <formula>LOWER( Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Lower Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pieces_in_Pack__c</fullName>
        <label>Pieces in Pack</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Pack_Qty__c</fullName>
        <label>Primary Pack Qty</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Month_CS75__c</fullName>
        <label>Prior Month CS75</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Hierarchy__c</fullName>
        <label>GPL</label>
        <referenceTo>Product_Hierarchy__c</referenceTo>
        <relationshipLabel>Parts</relationshipLabel>
        <relationshipName>Parts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Manager_ANZ__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Parts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Owning_GIBU__c</fullName>
        <description>This field contains the Product Owning GIBU</description>
        <formula>Product_Hierarchy__r.CBC1_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Owning GIBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Part__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposal Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchasing_UOM__c</fullName>
        <label>Purchasing UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>MR</fullName>
                </value>
                <value>
                    <fullName>BX</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RESPONSIBLE_DESIGN_OWNER_CDE__c</fullName>
        <description>RESPONSIBLE_DESIGN_OWNER_CDE</description>
        <label>Responsible Design Owner Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPN_Description__c</fullName>
        <externalId>true</externalId>
        <label>RPN Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RPN_Part__c</fullName>
        <externalId>true</externalId>
        <label>RPN Part</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_No_Description__c</fullName>
        <label>Reference No./Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SALES_INTENT_CDE__c</fullName>
        <label>Sales Intent Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIPPER_PACKAGING_QTY__c</fullName>
        <label>Shipper Packaging Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHIPPER_PACKAGING_TYPE_CDE__c</fullName>
        <label>Shipper Packaging Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STANDARD_PACKAGING_QTY__c</fullName>
        <label>Standard Packaging Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS_CDE__c</fullName>
        <label>Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selling_Source__c</fullName>
        <label>Selling Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>5R10</fullName>
                </value>
                <value>
                    <fullName>5R20</fullName>
                </value>
                <value>
                    <fullName>A800</fullName>
                </value>
                <value>
                    <fullName>B100</fullName>
                </value>
                <value>
                    <fullName>B800</fullName>
                </value>
                <value>
                    <fullName>FA00</fullName>
                </value>
                <value>
                    <fullName>FN00</fullName>
                </value>
                <value>
                    <fullName>GG00</fullName>
                </value>
                <value>
                    <fullName>GH00</fullName>
                </value>
                <value>
                    <fullName>GJ00</fullName>
                </value>
                <value>
                    <fullName>GK00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selling_UOM__c</fullName>
        <label>Selling UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>MR</fullName>
                </value>
                <value>
                    <fullName>BX</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Price__c</fullName>
        <label>Standard Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stock_UOM__c</fullName>
        <label>Stock UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>MR</fullName>
                </value>
                <value>
                    <fullName>BX</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>FT</fullName>
                </value>
                <value>
                    <fullName>EA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TE_Part_External_Key__c</fullName>
        <description>External key field for part number</description>
        <externalId>true</externalId>
        <label>TE_Part_External_Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag_Name__c</fullName>
        <label>Tag Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNIT_PACKAGING_QTY__c</fullName>
        <label>Unit Packaging Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNIT_PACKAGING_TYPE_CDE__c</fullName>
        <label>Unit Packaging Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Part</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CBC1_DESC__c</columns>
        <columns>Product_Hierarchy__c</columns>
        <columns>Description__c</columns>
        <columns>GPL_txt__c</columns>
        <columns>GPL_DESC__c</columns>
        <columns>GPL_Description__c</columns>
        <columns>Material_Type_Desc__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Proposal_Parts</fullName>
        <columns>NAME</columns>
        <columns>Product_Hierarchy__c</columns>
        <columns>Description__c</columns>
        <columns>IsActive__c</columns>
        <columns>CBC3_Description__c</columns>
        <columns>GPL_txt__c</columns>
        <columns>GPL_DESC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Energy</value>
        </filters>
        <label>Proposal Parts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>